--- a/src/gallery-introtour-ui/css/gallery-introtour-ui.css
+++ b/src/gallery-introtour-ui/css/gallery-introtour-ui.css
@@ -1,12 +1,18 @@
 .yui-galleryintrotourui-card{
 	position:absolute;
 	width:200px;
+	-moz-box-shadow: 0 0 11px #888;
+	-webkit-box-shadow: 0 0 11px#888;
+	box-shadow: 0 0 11px #888;
+	border:1px solid #6e329d;
+}
+.yui-galleryintrotourui-card-container{
 	background-color:#FFF;
 	color:#000;
-	border:1px solid #6e329d;
-	-webkit-border-radius: 3px;
+	/*-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
-	border-radius: 3px;
+	border-radius: 3px;*/
+	word-wrap:break-word;
 }
 .yui-galleryintrotourui-card-text{
 	min-height:50px;
@@ -14,16 +20,86 @@
 }
 .yui-galleryintrotourui-card-nav{
 	border-top:1px solid #cccccc;
-	padding:14px;
+	padding:4px;
 }
 .yui-galleryintrotourui-card-next{
 	float:right;
-	margin-bottom:10px;
+	margin:4px 8px 6px;
 }
-.yui-galleryintrotourui-card-arrowright{
-	width: 0;
-	height: 0;
-	border-top: 10px solid transparent;
-	border-bottom: 10px solid transparent;
-	border-left: 10px solid #b0b0b0;
+.yui-galleryintrotourui-card-arrow,.yui-galleryintrotourui-card-arrow:after {
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+}
+
+.yui-galleryintrotourui-card-arrow {
+  border-width: 11px;
+}
+
+.yui-galleryintrotourui-card-arrow:after {
+  border-width: 10px;
+  content: "";
+}
+
+.yui-galleryintrotourui-card-arrow.top {
+  left: 10%;
+  bottom:-11px;
+  border-top-color: #999;
+  border-top-color: rgba(0, 0, 0, 0.25);
+  border-bottom-width: 0;
+}
+
+.top.yui-galleryintrotourui-card-arrow:after {
+  bottom: 1px;
+  margin-left: -10px;
+  border-top-color: #fff;
+  border-bottom-width: 0;
+}
+
+.yui-galleryintrotourui-card-arrow.right {
+  top: 15%;
+  left: -11px;
+  border-right-color: #999;
+  border-right-color: rgba(0, 0, 0, 0.25);
+  border-left-width: 0;
+}
+
+.right.yui-galleryintrotourui-card-arrow:after {
+  bottom: -10px;
+  left: 1px;
+  border-right-color: #ffffff;
+  border-left-width: 0;
+}
+
+.yui-galleryintrotourui-card-arrow.bottom {
+  left: 10%;
+  top:-11px;
+  border-bottom-color: #999;
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-top-width: 0;
+}
+
+.bottom.yui-galleryintrotourui-card-arrow:after {
+  top: 1px;
+  margin-left: -10px;
+  border-bottom-color: #ffffff;
+  border-top-width: 0;
+}
+
+.yui-galleryintrotourui-card-arrow.left {
+  top: 15%;
+  right:-11px;
+  border-left-color: #999;
+  border-left-color: rgba(0, 0, 0, 0.25);
+  border-right-width: 0;
+}
+
+.left.yui-galleryintrotourui-card-arrow:after {
+  right: 1px;
+  bottom: -10px;
+  border-left-color: #ffffff;
+  border-right-width: 0;
 }
