--- a/src/gallery-introtour-ui/docs/index.mustache
+++ b/src/gallery-introtour-ui/docs/index.mustache
@@ -1,13 +1,13 @@
 <div class="intro">
     <p>
-		Module helps in integrating step by step tour of features on your page.
+		Module helps in integrating step by step walkthrough on your page.
     </p>
 </div>
 
 <h2>Description</h2>
 
 <p>
-	Use this plugin as a way to tell users of a new feature on your web page. The module integrates simple step by step cards explaining different components on your page. This is an easy way to highlight new features and help users get accustomed to it.	
+	Use the configuration below, to quickly set up a step by step walkthrough of features on your page. You can position the walkthrough callouts to appear on the right,left,top or bottom of the element you are describing. For the left/right position, give the width of the element. This positions the callout exactly the way you want it. Similarily, give the height of the element when using the top/bottom positioning of the callout. Future features, include a complete customization of the look & feel of the callouts.
 </p>
 
 YUI().use('gallery-introtour-ui', function (Y) {
